--- a/index.html
+++ b/index.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="style.css">
-
     <title>Projeto - Portfolio 2</title>
-
 </head>
-
 <body>
-
     <section class="hidden">
         <h2>Bem-Vindo!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
     <section class="hidden">
-        <h2>Bem-Vindo!</h2>
+        <h2>Biografia</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
     <section class="hidden">
-        <h2>Bem-Vindo!</h2>
+        <h2>Trabalhos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
     <section class="hidden">
-        <h2>Bem-Vindo!</h2>
+        <h2>Projetos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
     <section class="hidden">
-        <h2>Bem-Vindo!</h2>
+        <h2>Contatos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
