Menu Transparente e Conexão com os Clicks no Nav

--- a/index.html
+++ b/index.html
@@ -7,31 +7,41 @@
     <title>Projeto - Portfolio 2</title>
 </head>
 <body>
-    <section class="hidden">
+    <div class="header">
+        <ul>
+            <li><a href="#bem-vindo">Bem-Vindo</a></li>
+            <li><a href="#biografia">Biografia</a></li>
+            <li><a href="#trabalhos">Trabalhos</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#contatos">Contatos</a></li>
+        </ul>
+    </div>
+
+    <section id="bem-vindo" class="hidden">
         <h2>Bem-Vindo!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-    <section class="hidden">
+    <section id="biografia" class="hidden">
         <h2>Biografia</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-    <section class="hidden">
+    <section id="trabalhos" class="hidden">
         <h2>Trabalhos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-    <section class="hidden">
+    <section id="projetos" class="hidden">
         <h2>Projetos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-    <section class="hidden">
+    <section id="contatos" class="hidden">
         <h2>Contatos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
