alterações nos nomes do menu

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <div class="header">
         <ul>
-            <li><a href="#bem-vindo">Bem-Vindo</a></li>
-            <li><a href="#biografia">Biografia</a></li>
+            <li><a href="#início">Início</a></li>
+            <li><a href="#formação">Formação</a></li>
             <li><a href="#trabalhos">Trabalhos</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#contatos">Contatos</a></li>
         </ul>
     </div>
 
-    <section id="bem-vindo" class="hidden">
+    <section id="início" class="hidden">
         <h2>Bem-Vindo!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
-    <section id="biografia" class="hidden">
-        <h2>Biografia</h2>
+    <section id="formação" class="hidden">
+        <h2>Formação</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
     </section>
 
