Design Primeira Página

--- a/index.html
+++ b/index.html
@@ -24,16 +24,13 @@
     </div>
 
     <section id="início" class="hidden">
+
         <div class="pagina-inicial">
             <h1>Olá, sou Walker</h1>
-            <h3>Desenvolvedor Front-End</h3>
+            <h3>Desenvolvedor Front-End</h3><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
-        
-            <div class="btn-box">
-                <a href="#">Contrate-me.</a>
-                <a href="#">Vamos Conversar.</a>
-            </div>
         </div>
+
     </section>
 
     <section id="formação" class="hidden">
