apenas mudança de texto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="pagina-inicial">
             <h1>Olá, sou Walker</h1>
             <h3>Desenvolvedor Front-End</h3><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deleniti accusamus exercitationem fugit quam repellendus assumenda in natus culpa ut, id quis quibusdam optio dolor? Illo ad odit assumenda sed?</p>
+            <p>Sempre fui curioso sobre novas tecnologias e como elas moldam o mundo ao nosso redor. Durante anos, apesar do interesse constante, nunca tive a oportunidade de mergulhar profundamente no estudo dessas inovações. Recentemente, decidi que era hora de transformar essa curiosidade em conhecimento prático. Dediquei meu tempo e esforço para aprender e dominar as ferramentas e linguagens essenciais do desenvolvimento web, como HTML, CSS e JavaScript. Estou sempre buscando novas maneiras de melhorar minhas habilidades e criar experiências web que não apenas atendam às necessidades dos usuários.</p>
         </div>
 
     </section>
