--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
 
-        <a href="#" class="logo">.Walker</a>
+        <a href="#" class="logo">.Wal<strong id="k">k</strong>er</a>
 
         <ul>
             <li><a href="#início">Início</a></li>
