conserto do texto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="pagina-inicial-esquerda">
             <h1>Olá, sou Walker</h1>
             <h3>Desenvolvedor Front-End</h3><br>
-            <p>Sempre fui curioso sobre novas tecnologias e como elas moldam o mundo ao nosso redor...Sempre fui curioso sobre novas tecnologias e como elas moldam o mundo ao nosso redor. Durante anos, apesar do interesse constante, nunca tive a oportunidade de mergulhar profundamente no estudo dessas inovações. Recentemente, decidi que era hora de transformar essa curiosidade em conhecimento prático. Dediquei meu tempo e esforço para aprender e dominar as ferramentas e linguagens essenciais do desenvolvimento web, como HTML, CSS e JavaScript. Estou sempre buscando novas maneiras de melhorar minhas habilidades e criar experiências web que atendam às necessidades dos usuários.</p>
+            <p>Sempre fui curioso sobre novas tecnologias e como elas moldam o mundo ao nosso redor. Durante anos, apesar do interesse constante, nunca tive a oportunidade de mergulhar profundamente no estudo dessas inovações. Recentemente, decidi que era hora de transformar essa curiosidade em conhecimento prático. Dediquei meu tempo e esforço para aprender e dominar as ferramentas e linguagens essenciais do desenvolvimento web, como HTML, CSS e JavaScript. Estou sempre buscando novas maneiras de melhorar minhas habilidades e criar experiências web que atendam às necessidades dos usuários.</p>
         </div>
     </section>
 
