Alteração de Nome de Sessão

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="#" class="logo">.Wal<strong id="k">k</strong>er</a>
         <ul>
             <li><a href="#início">Início</a></li>
-            <li><a href="#formação">Formação</a></li>
+            <li><a href="#conhecimentos">Conhecimentos</a></li>
             <li><a href="#trabalhos">Trabalhos</a></li>
             <li><a href="#projetos">Projetos</a></li>
             <li><a href="#contatos">Contatos</a></li>
@@ -26,9 +26,9 @@
         </div>
     </section>
 
-    <section id="formação" class="hidden">
+    <section id="conhecimentos" class="hidden">
         <div class="pagina-inicial-direita">
-            <h2>Formação</h2>
+            <h2>Conhecimentos</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
         </div>
     </section>
