inclusão do texto de conhecimentos

--- a/index.html
+++ b/index.html
@@ -28,28 +28,29 @@
 
     <section id="conhecimentos" class="hidden">
         <div class="pagina-inicial-direita">
-            <h2>Conhecimentos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+            <h1>Conhecimentos</h1>
+            <h3>Aprofundando Habilidades</h3><br>
+            <p>A cada projeto que desenvolvo, mergulho em uma nova linguagem e avanço para uma nova etapa de aprendizado. Tenho conhecimento em diferentes níveis de GitHub, CSS, HTML, C, Java e JavaScript. Reconheço que ainda há um longo caminho pela frente, mas estou confiante de que minha determinação e persistência me permitirão aprender e dominar cada nova linguagem que eu estudo</p>
         </div>
     </section>
 
     <section id="trabalhos" class="hidden">
         <div class="pagina-inicial-esquerda">
-            <h2>Trabalhos</h2>
+            <h1>Trabalhos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
         </div>
     </section>
 
     <section id="projetos" class="hidden">
         <div class="pagina-inicial-direita">
-            <h2>Projetos</h2>
+            <h1>Projetos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
         </div>
     </section>
 
     <section id="contatos" class="hidden">
         <div class="pagina-inicial-esquerda">
-            <h2>Contatos</h2>
+            <h1>Contatos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
         </div>
     </section>
