resolução de conhecimentos

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
         
         <div class="logos">
             <div class="logo hidden">
-                <img class="avatar" src="assets/icone-html.png" alt="Ícone HTML">
+                <img class="avatar" src="Assets/icon-html.png" alt="Ícone HTML">
             </div>
             <div class="logo hidden">
-                <img class="avatar" src="assets/icone-js.png" alt="Ícone JavaScript">
+                <img class="avatar" src="Assets/icon-js.png" alt="Ícone JavaScript">
             </div>
             <div class="logo hidden">
-                <img class="avatar" src="assets/icone-css.png" alt="Ícone CSS">
+                <img class="avatar" src="Assets/icon-css.png" alt="Ícone CSS">
             </div>
             <div class="logo hidden">
-                <img class="avatar" src="assets/icone-c.png" alt="Ícone C">
+                <img class="avatar" src="Assets/icon-c.png" alt="Ícone C">
             </div>
             <div class="logo hidden">
-                <img class="avatar" src="assets/icone-java.png" alt="Ícone Java">
+                <img class="avatar" src="Assets/icon-java.png" alt="Ícone Java">
             </div>
             <div class="logo hidden">
-                <img class="avatar" src="assets/icone-github.png" alt="Ícone GitHub">
+                <img class="avatar" src="Assets/icon-github.png" alt="Ícone GitHub">
             </div>
         </div>
         
