--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="#" class="logo">.Wal<strong id="k">k</strong>er</a>
+        <a href="#" class="logo">.Port<strong id="k">f</strong>olio</a>
         <ul>
             <li><a href="#início">Início</a></li>
             <li><a href="#conhecimentos">Conhecimentos</a></li>
@@ -24,6 +24,8 @@
             <h3>Desenvolvedor Front-End</h3><br>
             <p>Sempre fui curioso sobre novas tecnologias e como elas moldam o mundo ao nosso redor. Durante anos, apesar do interesse constante, nunca tive a oportunidade de mergulhar profundamente no estudo dessas inovações. Recentemente, decidi que era hora de transformar essa curiosidade em conhecimento prático. Dediquei meu tempo e esforço para aprender e dominar as ferramentas e linguagens essenciais do desenvolvimento web, como HTML, CSS e JavaScript. Estou sempre buscando novas maneiras de melhorar minhas habilidades e criar experiências web que atendam às necessidades dos usuários.</p>
         </div>
+
+        <img id="imagem" src="Assets/foto-perfil-sem-fundo.png" alt="foto perfil" srcset="">
     </section>
 
     <section id="conhecimentos" class="hidden">
@@ -58,16 +60,39 @@
     </section>
 
     <section id="trabalhos" class="hidden">
-        <div class="pagina-inicial-esquerda">
+        <div class="pagina-inicial-esquerda div-para-direita">
             <h1>Trabalhos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+            <h3>Programação - FANTECH</h3>
+            <p>Esses são os trabalhos realizados no curso de Técnico em Programação da FANTECH, que terá início em fevereiro de 2024. Este curso oferece uma experiência completa e imersiva, perfeita para adquirir aprendizado de alta qualidade e explorar ao máximo a criatividade e dedicação de cada aluno. Os participantes terão a oportunidade de desenvolver habilidades práticas e teóricas em programação, trabalhando em projetos desafiadores que refletem as demandas reais do mercado. Além disso, o curso contará com instrutores experientes e uma estrutura moderna, proporcionando um ambiente propício para o crescimento profissional e pessoal. Venha fazer parte dessa jornada e prepare-se para uma carreira de sucesso na área de tecnologia!</p>
         </div>
+
+        <div class="icones-trabalhos">
+
+            <div class="icones-trabalhos01 hidden">
+
+                <a href="https://walkerdemonlord.github.io/Tela-inicial-Jogo/">
+                    <img class="logo-trabalho" src="Assets/icone-jogo.png" alt="Ícone jogo da desgraça">
+                    <h2 class="fonte-texto">Kamikaze Birds!</h2>
+                </a>
+            </div>
+            <div class="icones-trabalhos01 hidden">
+
+                <a href="https://walkerdemonlord.github.io/Projeto-Calculadora/">
+                    <img class="logo-trabalho" src="Assets/backgroung-matrix.gif" alt="Ícone calculadora">
+                    <h2 class="fonte-texto">Calculadora Matrix</h2>
+                </a>
+
+            </div>
+        </div>
+        
+        
     </section>
 
     <section id="projetos" class="hidden">
         <div class="pagina-inicial-direita">
             <h1>Projetos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+            <h3>Olhando para o Futuro</h3>
+            <p>Mas não me contive em apenas fazer os trabalhos indicados pelo professor. Aqui estão os outros projetos que tenho realizado enquanto faço o curso.</p>
         </div>
     </section>
 
